Change navbar alignment and edit footer
Changed navbar's alingment when expanded to center and added
more content to footer (author info and secondary navigation).

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="nav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav flex-sm-row flex-column align-items-center">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
                     </li>
@@ -98,9 +98,26 @@
         </div>
     </section>
 
-    <footer class="bg-dark p-3">
+    <footer class="bg-dark p-3 d-flex align-items-center">
         <div class="container text-light">
-            <p>Made by <a class="text-light" href="https://github.com/rafallyczek">rafallyczek</a></p>
+            <div class="row">
+                <div class="col-6 d-flex align-items-center">
+                    <p class="m-0">Made by © 2023<a class="link-secondary text-decoration-none" href="https://github.com/rafallyczek"> rafallyczek</a></p>
+                </div>
+                <div class="col-6">
+                    <ul class="nav justify-content-end align-items-center flex-sm-row flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link link-secondary" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link-secondary" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link-secondary" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
     
