--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous" defer></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
-            <a href="#" class="navbar-brand">Page</a>
+            <a href="#" class="navbar-brand">Bootstrap Page</a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-label="Expand Navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,7 +49,7 @@
         </div>
     </header>
 
-    <section class="cards bg-light d-flex align-items-center py-4">
+    <section class="bg-light d-flex align-items-center py-4">
         <div class="container text-md-start text-center">
             <div class="row mb-3">
                 <h2>Card section</h2>
@@ -93,6 +94,43 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-body-secondary d-flex align-items-center py-4">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-12 text-md-start text-center">
+                    <h2>Form section</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos neque rem quia hic atque doloribus blanditiis dicta, aspernatur accusantium non similique iure excepturi tenetur ab dolor eum. Blanditiis necessitatibus inventore, ducimus vitae ullam nostrum porro. Porro impedit provident neque laborum, in obcaecati culpa accusantium delectus eaque modi beatae earum dolores aut voluptate odit eos, optio iure. Quibusdam temporibus nobis odit nisi magnam accusantium quasi omnis tempore, libero a nihil ipsum minima recusandae eius architecto et sit voluptas possimus distinctio consequuntur? Dolor qui sint ad est veritatis quam! Sed odit consequuntur inventore esse ipsum reprehenderit! Assumenda id reprehenderit unde quos deleniti.</p>
+                </div>
+                <div class="col-6 d-md-block d-flex flex-column align-items-center">
+                    <h2 class="text-md-start text-center">Newsletter registration</h2>
+                    <form novalidate>
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="email" placeholder="mail@example.com" required>
+                            <label for="email" class="form-label">Email (e.g. mail@example.com)</label>
+                            <div class="invalid-feedback">
+                                Please provide a valid email.
+                            </div>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="name" placeholder="John Doe" required>
+                            <label for="name" class="form-label">Name (e.g. John Doe)</label>
+                            <div class="invalid-feedback">
+                                Please provide a name.
+                            </div>
+                        </div>
+                        <div class="form-check mb-3">
+                            <input type="checkbox" class="form-check-input" id="products">
+                            <label class="form-check-label" for="products">Receive information about new products</label>
+                        </div>
+                        <div class="text-md-start text-center">
+                            <button type="submit" class="btn btn-primary">Register</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
